--- a/client/index.html
+++ b/client/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>REGISTRATION FORM</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>REST API</title>
+    <style>
+        [v-cloak] {
+            display: none;
+        }
+    </style>
+</head>
+<body>
 
-  <body>
-  <div class="container pt-3" id="app" v-cloak>
-    <h1>Registration form</h1>
+<div class="container pt-3" id="app" v-cloak>
+    <h1>REST API</h1>
 
     <form class="form-inline mb-3" @submit.prevent="createContact">
         <div class="form-group mr-5">
@@ -23,19 +29,23 @@
         </div>
         <button class="btn btn-primary" type="submit" :disabled="!canCreate">Создать</button>
     </form>
-      <div v-if="contacts.length">
-      <div class="card mb-3" v-for="contact in contacts">
+
+    <div v-if="loading">
+        <loader />
+    </div>
+    <div v-else-if="contacts.length">
+        <div class="card mb-3" v-for="contact in contacts">
             <div class="card-body">
                 <h5 class="card-title" :style="{color: contact.marked ? 'red' : 'black'}">{{contact.name}}</h5>
                 <p class="card-text">{{contact.value}}</p>
                 <button class="btn btn-primary" @click="markContact(contact.id)" :disabled="contact.marked">Отметить</button>
                 <button class="btn btn-danger" @click="removeContact(contact.id)">Удалить</button>
             </div>
-      </div>
-          <p v-else>Контактов пока нет</p>
-      </div>
+        </div>
+    </div>
+    <p v-else>Контактов пока нет</p>
+</div>
 
-
-  <script type="module" src="frontend.js"></script>
-  </body>
+<script type="module" src="frontend.js"></script>
+</body>
 </html>
